# slacky_manager

./: LICENSE  README.md  __main__.py  cpp-bmstu.db  dependencies.txt  install.sh  requirements.txt  setup.cfg  uninstall.sh
.github/workflows/: debian.yml  python-app.yml
debian/: changelog  control  copyright  files  rules
slacky_manager/: __init__.py  main.py  slack_app.py
slacky_manager/dboper/: __init__.py
slacky_manager/mentor/: __init__.py  lab_actions.py
slacky_manager/mentor_manage/: __init__.py  handles.py
slacky_manager/prettyness/: __init__.py  blocks.py
slacky_manager/submitter/: __init__.py  handles.py
slacky_manager/website/: __init__.py  handles.py  setup.py
slacky_manager/website/templates/: report.html
slacky_manager/website/templates/styles/: style.css
sparse/etc/: slackymanager.conf
sparse/lib/systemd/system/: slackymanager.service
