[metadata]
name = slacky_manager_zinstack625
version = 0.4.0
author = Anton Klimanov (zinstack625)
author_email = klimanov625@outlook.com
description = Slack bot for lab distribution
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zinstack625/slacky_manager
project_urls =
    Bug Tracker = https://github.com/zinstack625/slacky_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = slacky_manager
packages = find:
python_requires = >=3.6

[options.packages.find]
where = slacky_manager
